[package]
name = "fenestella"
description = "Window handling, faster and ergonomic alternative to winit but for Windows OS only"
authors = ["CatCode79"]
edition = "2021"
license = "MIT"
publish = false
version = "0.1.0"

[dependencies]
bitflags = "2"
hashbrown = "0.14"
glam = "0.28"
log = "0.4"
raw-window-handle = "0.6"

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
]
